--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -28,4 +28,10 @@
     <string name="retour">retour</string>
 
 
+    <string name="firstLogin">"Bienvenue dans votre nouvelle application pour gerer votre clim et votre geothermie. \n
+Cliquer sur le bouton clim ou geo vous pourrez ainsi programmer les horaires d'activation et la temperature.\n Ne rentrez seulememt l'heure sans les minutes pour les deux premiers fields, pour la temperature il est possible d'entrer un nombre a virgule
+Pour activer rapidement la clim ou le chauffage pour 2 heures il suffit de faire un appui long sur celui que vous voulez. La temperature sera la dernier que vous avez definie"
+    </string>
+
+
 </resources>
