finalisation et correction bug

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -33,7 +33,7 @@ Pour activer rapidement la clim ou le chauffage pour 2 heures il suffit de faire
     </string>
 
     <string name="thermco">thermco</string>
-    <string name="adress_du_salon">adress du salon</string>
+    <string name="adress_du_salon">address du salon</string>
     <string name="save">save</string>
 
 
@@ -42,18 +42,22 @@ Pour activer rapidement la clim ou le chauffage pour 2 heures il suffit de faire
 
     <!-- Preference Titles -->
     <string name="server_header">Serveur</string>
-    <string name="paramettre_header">Proprieter</string>
+    <string name="parametre_thermostat_header">Parametres thermostat</string>
+    <string name="parametre_volet_header">Parametres volet </string>
+    <string name="parametre_portail_header">Parametre portail</string>
 
     <!-- Serveur Preferences -->
     <string name="serveur_thermostat_title">addresse ip du thermostat</string>
     <string name="serveur_mqtt_title">Adresse IP du broker mqtt</string>
+    <string name="user_name_title">user name pour le broker</string>
+    <string name="password_title">Mot de passe pour le broker</string>
 
     <!-- paramettre Preferences -->
     <string name="topic_portail_title">Topic du portail</string>
-    <string name="user_name_title">user name pour le broker</string>
-    <string name="password_title">Mot de passe pour le broker</string>
-    <string name="topic_volet_down_title">Topic du Volet pour le descendre</string>
-    <string name="topic_volet_up_title">Topic du Volet pour le monter</string>
+    <string name="temperature_base_geothermie_title">Temperature de base geo</string>
+    <string name="topic_volet_title">Topic du Volet </string>
+    <string name="topic_thermostat_get_title">Topic de la temperature de la maison</string>
+    <string name="topic_thermostat_set_title">Topic pour l\'enoie des donnees au thermostat</string>
 
 
 </resources>
